--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,20 +101,20 @@
             android:background="@drawable/sign"
             android:text="@string/sign"
             android:textColor="@color/white" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="или"
             android:layout_gravity="center"
-            />
+            android:text="или" />
 
         <Button
             android:id="@+id/buttonRegister"
             android:layout_width="266dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"
             android:layout_marginTop="3dp"
+            android:layout_weight="1"
             android:background="@drawable/sign"
             android:text="@string/register"
             android:textColor="@color/white" />
