--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,6 +4,7 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
@@ -19,8 +20,7 @@
 
         <item
             android:id="@+id/nav_map_open"
-            android:icon="@android:drawable/ic_dialog_map"
-            android:tint="@color/text_bottom"
+            android:icon="@drawable/icon_google_map"
             android:title="Карта" />
     </group>
 </menu>
