--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.your_childrens.SlideshowFragment">
+    tools:context=".ui.your_childrens.SlideshowFragment"
+    android:background="@drawable/fon">
     <ListView
         android:id="@+id/list_childs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp">
-
+        android:layout_marginBottom="75dp">
     </ListView>
 
     <LinearLayout
